# electronics_factory

./: .env.sample  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
trading_network/: admin.py  models.py  serializers.py  urls.py  views.py
trading_network/migrations/: 0001_initial.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
